refactor: rename quantity to stockQuantity
